--- a/HTML/indexTarefaGabriel.html
+++ b/HTML/indexTarefaGabriel.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Frase</title>
+    <title>Pagina Qualquer</title>
 </head>
 <body>
-    "Criando o primeiro commit"
+    "Trata-se de um exemplo"
 </body>
 </html>
